--- a/Views/Home/Converter.cshtml
+++ b/Views/Home/Converter.cshtml
@@ -33,7 +33,7 @@
     <div class="fb-share-button" style="position:absolute;right:0;bottom:12px;right:12px;" data-href="http://video-converter.immanuel.co/home/converter" data-layout="box_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fvideo-converter.immanuel.co%2Fhome%2Fconverter&amp;src=sdkpreparse">Share</a></div>
     <div style="position:relative;">
         <h2 style="display: inline-block;">
-            Convert video, pdf, images for free, fast and online. No software installation needed.
+            Convert video files free, fast and online. No software installation needed.
         </h2>
         <div style="display: inline-block; position:absolute;right:0;">
             <div id="google_translate_element"></div>
