--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -113,6 +113,7 @@
                             <option value="mkv">MKV</option>
                             <option value="flv">FLV</option>
                             <option value="webm">WEBM</option>
+                            <option value="3gp">3GP</option>
                         </select> <br />
                         <span style="left:10px;position: absolute; bottom:3px;white-space:nowrap;">Choose Format</span>
                     </div>
